add Makefile, and update README.md

--- a/xfwm4/README
+++ b/xfwm4/README
@@ -1,5 +1,6 @@
 metabox
 -------
 
-A port of Metabox theme for Metacity by Garrett LeSage <garrett@redhat.com>
-Modify icons bigger for 4k display by <ido-gh@wtech.jp>
+* A port of Metabox theme for Metacity by Garrett LeSage <garrett@redhat.com>
+* Modify icons bigger for 4k display by <ido-gh@wtech.jp>
+  Source is https://github.com/fuminori-ido/metabox-theme.git
